--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "__tests__/config-retrieval.test.js", "jest.config.js", "tests/test.test.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "__tests__/config-retrieval.test.js", "jest.config.js", "tests/test.test.js", "tests/config-retrieval.test.js"],
   "exclude": ["node_modules"]
 }
