--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
     "next": "14.2.15",
     "react": "^18",
+    "react-d3": "^0.4.0",
     "react-dom": "^18"
   },
   "devDependencies": {
