--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "next": "14.2.15",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-d3": "^0.4.0",
     "react-dom": "^18"
