--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "next": "14.2.15",
